--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cybar - 主菜单</title>
     <link rel="stylesheet" href="style.css">
     <!-- Updated Google Fonts link -->
-    <link href="https://fonts.googleapis.com/css2?family=Electrolize&family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Electrolize&family=Orbitron:wght@400;700&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <header>
         <h1>Cybar</h1>
@@ -27,8 +30,9 @@
             <a href="calculator/" class="menu-link main-function calculator-link">
                 <span class="icon">🧪</span> 计算酒精度
             </a>
-            <a href="add/" class="menu-link admin-link"> <!-- Keep add recipe link here for now, or move if desired -->
-                <span class="icon">➕</span> 添加新配方
+            <!-- 添加自定义鸡尾酒创建器的链接 -->
+            <a href="custom/" class="menu-link main-function custom-link">
+                <span class="icon">✨</span> 新配方
             </a>
             <!-- Hide profile link by default. global.js should show it if logged in. -->
             <a href="profile/" class="menu-link profile-link" style="display: none;">
@@ -42,10 +46,6 @@
     <main id="content-area">
         <h2>欢迎来到 Cybar</h2>
         <p>请使用上方导航链接访问不同功能。</p>
-        <!-- Add login prompt message -->
-        <div id="login-prompt" style="display: none; margin-top: 15px; padding: 10px; background-color: #333; border: 1px solid #555; border-radius: 4px;">
-            请<a href="/auth/login/" style="color: #00e5ff; text-decoration: underline;">登录</a>后添加新配方。
-        </div>
     </main>
 
     <footer>
@@ -55,4 +55,5 @@
     <!-- global.js needs to check login status and show elements like .profile-link if logged in -->
     <script src="/js/global.js"></script>
 </body>
+
 </html>
