feat: 完善AI密钥配置系统，添加配置工具和文档
- 新增.gitignore文件，防止敏感信息提交
- 修复server.js中的AI密钥配置逻辑，支持动态加载密钥
- 创建配置工具setup-api-key.bat和setup-api-key.ps1，简化用户配置流程
- 更新项目文档，添加AI密钥配置指南和使用说明
- 新增API密钥测试脚本test-api-key.js，验证密钥有效性
- 新增AI功能验证脚本verify-ai-function.js，确保AI功能正常
- 提供config.json.example示例文件，指导用户配置
- 增强安全性，移除硬编码密钥，支持多种配置方式

--- a/recipes/index.html
+++ b/recipes/index.html
@@ -28,6 +28,11 @@
             <button id="load-recipes-btn">加载所有配方</button>
         </div>
          -->
+        <!-- 添加推荐区域 -->
+        <section id="recommendations-section" style="display: none;">
+            <h2>推荐配方</h2>
+            <div id="recommendations-container"></div>
+        </section>
         <section id="recipes-list">
             <h2>经典配方</h2>
             <!-- 搜索区域 -->
