--- a/recipes/detail.html
+++ b/recipes/detail.html
@@ -35,9 +35,9 @@
             </div>
         </section>        <!-- AI口味分析区域 -->
         <section id="ai-taste-analysis" style="display: none; margin: 30px 0; padding: 0; border-radius: 15px; overflow: hidden; box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);">
-            <!-- 头部区域 -->
-            <div class="ai-analysis-header" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); padding: 25px; color: white; position: relative; overflow: hidden;">
-                <div style="position: absolute; top: -50%; left: -50%; width: 200%; height: 200%; background: url('data:image/svg+xml,<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 100 100\"><defs><pattern id=\"brain\" patternUnits=\"userSpaceOnUse\" width=\"20\" height=\"20\"><circle cx=\"10\" cy=\"10\" r=\"1\" fill=\"rgba(255,255,255,0.1)\"/></pattern></defs><rect width=\"100\" height=\"100\" fill=\"url(%23brain)\"/></svg>') repeat; animation: float 20s ease-in-out infinite;"></div>
+            <!-- 头部区域 -->            
+             <div class="ai-analysis-header" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); padding: 25px; color: white; position: relative; overflow: hidden;">
+                <div style="position: absolute; top: -50%; left: -50%; width: 200%; height: 200%; background: url('data:image/svg+xml,%3Csvg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22%3E%3Cdefs%3E%3Cpattern id=%22brain%22 patternUnits=%22userSpaceOnUse%22 width=%2220%22 height=%2220%22%3E%3Ccircle cx=%2210%22 cy=%2210%22 r=%221%22 fill=%22rgba%28255,255,255,0.1%29%22/%3E%3C/pattern%3E%3C/defs%3E%3Crect width=%22100%22 height=%22100%22 fill=%22url%28%23brain%29%22/%3E%3C/svg%3E') repeat; animation: float 20s ease-in-out infinite;"></div>
                 <div style="position: relative; z-index: 2;">
                     <h3 style="margin: 0 0 10px 0; display: flex; align-items: center; gap: 15px; font-size: 1.4em; font-weight: 600;">
                         <div style="background: rgba(255,255,255,0.2); padding: 12px; border-radius: 50%; backdrop-filter: blur(10px);">
