--- a/custom/ingredients-selection.html
+++ b/custom/ingredients-selection.html
@@ -91,7 +91,7 @@
                             <div class="ingredient-abv">38% 酒精度</div>
                         </div>
                         <div class="volume-input-container">
-                            <input type="number" class="volume-input" value="30" min="0" step="5">
+                            <input type="number" class="volume-input" value="30" min="0" max="1000" step="5">
                             <span class="volume-unit">ml</span>
                         </div>
                         <button class="remove-selected-btn" title="移除此原料">×</button>
