chore: 移除过时的调酒模拟器相关文件，更新相关HTML和CSS以反映弃用状态

--- a/custom/complete-selector-demo.html
+++ b/custom/complete-selector-demo.html
@@ -1,3 +1,7 @@
+<!-- DEPRECATED: demo page - removed content -->
+<!-- To permanently remove this file from the repository run:
+     git rm custom/complete-selector-demo.html
+ -->
 <!DOCTYPE html>
 <html lang="zh-cn">
 
