--- a/custom/index.html
+++ b/custom/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>自定义鸡尾酒创建器 - Cybar</title>
     <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/custom/cocktail-simulation.css">
+    <!-- 注意: 以下模拟器/调试资源为演示用途，已弃用并不随生产部署一起使用 -->
+    <!-- <link rel="stylesheet" href="/custom/cocktail-simulation.css"> -->
     <!-- 添加Google Fonts以保持与主页一致 -->
     <link href="https://fonts.googleapis.com/css2?family=Electrolize&family=Orbitron:wght@400;700&display=swap"
         rel="stylesheet">
@@ -889,8 +890,9 @@
     </footer>
 
     <script src="/js/global.js"></script>
-    <script src="/custom/cocktail-debug.js"></script>
-    <script src="/custom/cocktail-simulation.js"></script>
+    <!-- 模拟器/调试脚本（已弃用，保留于仓库供开发参考） -->
+    <!-- <script src="/custom/cocktail-debug.js"></script>
+    <script src="/custom/cocktail-simulation.js"></script> -->
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             let ingredientsByCategory = {};
