--- a/recipes/index.html
+++ b/recipes/index.html
@@ -49,6 +49,7 @@
                         <option value="name">按名称排序</option>
                     </select>
                 </div>
+                <!-- 原料筛选功能已移除 -->
             </div>
             <!-- 配方将由 JavaScript 动态加载到这里 -->
             <div id="recipes-container" style="display: none;"> <!-- Container for recipes, initially hidden -->
