添加了接口

--- a/recipes/detail.html
+++ b/recipes/detail.html
@@ -23,6 +23,11 @@
     <main>        <section id="recipe-detail">
             <!-- Recipe details will be loaded here by JavaScript -->
             <div id="loading-detail-message">正在加载配方详情...</div>
+            <div class="recipe-header">
+                <h2 id="recipe-name">加载中...</h2>
+                <img id="recipe-image" src="" alt="成品图" style="max-width: 100%; max-height: 300px; border-radius: 10px; margin: 10px 0; display: none;">
+                <p class="meta-info">By <span id="recipe-creator">...</span></p>
+            </div>
             
             <!-- Interaction buttons container -->
             <div id="interaction-buttons" style="display: none; margin: 20px 0;">
