--- a/profile/index.html
+++ b/profile/index.html
@@ -24,9 +24,25 @@
     <main id="profile-content">
         <h2>用户界面</h2>
         <div class="user-info">
-            <h3>欢迎回来, <span id="username">加载中...</span></h3>
-        </div>
+            <div class="avatar-container" style="text-align: center; margin-bottom: 10px;">
+                <img id="user-avatar" src="/uploads/avatars/test.jpg" alt="用户头像" 
+                    style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover; cursor: pointer; border: 3px solid #00f2fe; box-shadow: 0 0 15px rgba(0, 242, 254, 0.5);">
+                <input type="file" id="avatar-input" accept="image/*" style="display: none;">
+            </div>
 
+            <h3>欢迎回来, <span id="username">加载中...</span></h3>
+
+            <div class="signature-container" style="max-width: 300px; margin: 15px auto; text-align: center;">
+                <div class="input-group" style="display: flex; gap: 5px;">
+                    <input type="text" id="signature-input" placeholder="写一句个性签名 (50字以内)..." maxlength="50"
+                        style="flex: 1; padding: 8px; border-radius: 4px; border: 1px solid #444; background: rgba(0,0,0,0.3); color: #fff;">
+                    <button id="save-signature-btn" style="padding: 8px 15px; border: none; border-radius: 4px; background: #00f2fe; color: #000; cursor: pointer; font-weight: bold;">
+                        保存
+                    </button>
+                </div>
+                <p id="signature-status" style="font-size: 0.8em; color: #aaa; margin-top: 5px; height: 1.2em;"></p>
+            </div>
+        </div>
         <div class="history-tabs">
             <button class="tab-button active" data-tab="likes">
                 <i class="fas fa-heart"></i> 我的点赞
