Refactor code structure for improved readability and maintainability

--- a/custom/index.html
+++ b/custom/index.html
@@ -872,7 +872,7 @@
                         <p>完成上述步骤后，这里将显示配方摘要</p>
                     </div>
 
-                    <button type="submit" class="submit-btn" id="create-cocktail-btn" disabled>创建鸡尾酒</button>
+                    <button type="button" class="submit-btn" id="create-cocktail-btn" disabled>创建鸡尾酒</button>
                 </div>
             </div>
         </form>
