新增了一些接口

--- a/admin/index.html
+++ b/admin/index.html
@@ -64,7 +64,9 @@
                         <thead>
                             <tr>
                                 <th>ID</th>
+                                <th>图片</th>
                                 <th>名称</th>
+                                <th>创建者</th>
                                 <th>操作</th>
                             </tr>
                         </thead>
@@ -126,11 +128,10 @@
                     <table>
                         <thead>
                             <tr>
-                                <th>评论 ID</th>
-                                <th>用户名</th>
-                                <th>配方 ID</th>
+                                <th>用户</th>
+                                <th>配方</th>
                                 <th>评论内容</th>
-                                <th>时间戳</th>
+                                <th>时间</th>
                                 <th>操作</th>
                             </tr>
                         </thead>
