--- a/custom/index.html
+++ b/custom/index.html
@@ -790,7 +790,23 @@
                 </div>
                 <div class="form-group">
                     <label>上传成品图 (可选)</label>
-                    <input type="file" id="cocktail-image" accept="image/*" style="border: 1px solid #444; padding: 10px; border-radius: 5px;">
+                    <!-- 隐藏的文件输入 -->
+                    <input type="file" id="cocktail-image" accept="image/*" style="display: none;">
+                    
+                    <!-- 图片预览区域 -->
+                    <div id="image-preview-container" style="margin-top: 10px;">
+                        <!-- 有图片时显示预览 -->
+                        <div id="image-preview" style="display: none; position: relative; max-width: 300px;">
+                            <img id="preview-img" src="" alt="预览" style="width: 100%; border-radius: 8px; cursor: pointer; border: 2px solid #00e5ff;">
+                            <div style="margin-top: 8px; text-align: center; color: #00e5ff; font-size: 14px;">
+                                点击图片更换
+                            </div>
+                        </div>
+                        <!-- 没有图片时显示上传按钮 -->
+                        <button type="button" id="upload-image-btn" style="padding: 10px 20px; background: #0f3460; color: #00e5ff; border: 1px solid #00e5ff; border-radius: 5px; cursor: pointer;">
+                            选择图片
+                        </button>
+                    </div>
                 </div>
                 <div class="form-group">
                     <label for="cocktail-description">描述</label>
@@ -836,11 +852,7 @@
             <div class="form-section">
                 <h3>制作步骤</h3>
                 <div class="create-steps">
-                    <div class="step-container">
-                        <textarea class="step-textarea" id="step-input" placeholder="例如: 将所有原料倒入调酒杯中..."></textarea>
-                        <button type="button" class="add-step-btn" id="add-step-btn">添加步骤</button>
-                    </div>
-
+                    <button type="button" class="add-step-btn" id="add-step-btn">添加步骤</button>
                     <div class="step-list" id="steps-container">
                     </div>
                 </div>
